--- a/English.lproj/MainMenu.xib
+++ b/English.lproj/MainMenu.xib
@@ -321,7 +321,7 @@
 										<object class="NSTextField" id="236318294">
 											<reference key="NSNextResponder" ref="373613192"/>
 											<int key="NSvFlags">268</int>
-											<string key="NSFrame">{{39, 118}, {71, 17}}</string>
+											<string key="NSFrame">{{15, 119}, {95, 17}}</string>
 											<reference key="NSSuperview" ref="373613192"/>
 											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="566881816"/>
@@ -329,7 +329,7 @@
 											<object class="NSTextFieldCell" key="NSCell" id="621385762">
 												<int key="NSCellFlags">68157504</int>
 												<int key="NSCellFlags2">272630784</int>
-												<string key="NSContents">Ch1 Alarm</string>
+												<string key="NSContents">Ch1 Alarm A</string>
 												<reference key="NSSupport" ref="656277076"/>
 												<reference key="NSControlView" ref="236318294"/>
 												<reference key="NSBackgroundColor" ref="212187546"/>
@@ -343,7 +343,7 @@
 											<string key="NSFrame">{{232, 119}, {38, 17}}</string>
 											<reference key="NSSuperview" ref="373613192"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView" ref="309447933"/>
+											<reference key="NSNextKeyView" ref="599471834"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSTextFieldCell" key="NSCell" id="1034171322">
 												<int key="NSCellFlags">68157504</int>
@@ -492,15 +492,15 @@
 										<object class="NSTextField" id="919923729">
 											<reference key="NSNextResponder" ref="373613192"/>
 											<int key="NSvFlags">268</int>
-											<string key="NSFrame">{{39, 93}, {71, 17}}</string>
+											<string key="NSFrame">{{15, 94}, {95, 17}}</string>
 											<reference key="NSSuperview" ref="373613192"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView"/>
+											<reference key="NSNextKeyView" ref="333990369"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSTextFieldCell" key="NSCell" id="886573095">
 												<int key="NSCellFlags">68157504</int>
 												<int key="NSCellFlags2">272630784</int>
-												<string key="NSContents">Ch1 Alarm</string>
+												<string key="NSContents">Ch1 Alarm B</string>
 												<reference key="NSSupport" ref="656277076"/>
 												<reference key="NSControlView" ref="919923729"/>
 												<reference key="NSBackgroundColor" ref="212187546"/>
@@ -511,15 +511,15 @@
 										<object class="NSTextField" id="891105129">
 											<reference key="NSNextResponder" ref="373613192"/>
 											<int key="NSvFlags">268</int>
-											<string key="NSFrame">{{39, 68}, {71, 17}}</string>
+											<string key="NSFrame">{{15, 69}, {95, 17}}</string>
 											<reference key="NSSuperview" ref="373613192"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView"/>
+											<reference key="NSNextKeyView" ref="127577203"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSTextFieldCell" key="NSCell" id="807091716">
 												<int key="NSCellFlags">68157504</int>
 												<int key="NSCellFlags2">272630784</int>
-												<string key="NSContents">Ch2 Alarm</string>
+												<string key="NSContents">Ch2 Alarm A</string>
 												<reference key="NSSupport" ref="656277076"/>
 												<reference key="NSControlView" ref="891105129"/>
 												<reference key="NSBackgroundColor" ref="212187546"/>
@@ -530,15 +530,15 @@
 										<object class="NSTextField" id="986363287">
 											<reference key="NSNextResponder" ref="373613192"/>
 											<int key="NSvFlags">268</int>
-											<string key="NSFrame">{{39, 43}, {71, 17}}</string>
+											<string key="NSFrame">{{15, 44}, {95, 17}}</string>
 											<reference key="NSSuperview" ref="373613192"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView"/>
+											<reference key="NSNextKeyView" ref="686108679"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSTextFieldCell" key="NSCell" id="957899135">
 												<int key="NSCellFlags">68157504</int>
 												<int key="NSCellFlags2">272630784</int>
-												<string key="NSContents">Ch2 Alarm</string>
+												<string key="NSContents">Ch2 Alarm B</string>
 												<reference key="NSSupport" ref="656277076"/>
 												<reference key="NSControlView" ref="986363287"/>
 												<reference key="NSBackgroundColor" ref="212187546"/>
@@ -552,7 +552,7 @@
 											<string key="NSFrame">{{272, 112}, {88, 26}}</string>
 											<reference key="NSSuperview" ref="373613192"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView" ref="155938206"/>
+											<reference key="NSNextKeyView" ref="309447933"/>
 											<int key="NSTag">10</int>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSPopUpButtonCell" key="NSCell" id="295508062">
@@ -692,7 +692,7 @@
 											<string key="NSFrame">{{118, 88}, {103, 26}}</string>
 											<reference key="NSSuperview" ref="373613192"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView" ref="599471834"/>
+											<reference key="NSNextKeyView" ref="155938206"/>
 											<int key="NSTag">13</int>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSPopUpButtonCell" key="NSCell" id="845828831">
@@ -935,7 +935,7 @@
 											<string key="NSFrame">{{272, 88}, {88, 26}}</string>
 											<reference key="NSSuperview" ref="373613192"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView" ref="322421120"/>
+											<reference key="NSNextKeyView" ref="563731260"/>
 											<int key="NSTag">14</int>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSPopUpButtonCell" key="NSCell" id="927273204">
@@ -1112,7 +1112,7 @@
 											<string key="NSFrame">{{434, 112}, {19, 27}}</string>
 											<reference key="NSSuperview" ref="373613192"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView" ref="891105129"/>
+											<reference key="NSNextKeyView" ref="322421120"/>
 											<int key="NSTag">12</int>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSStepperCell" key="NSCell" id="780520526">
@@ -1226,7 +1226,7 @@
 											<string key="NSFrame">{{400, 91}, {37, 22}}</string>
 											<reference key="NSSuperview" ref="373613192"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView" ref="563731260"/>
+											<reference key="NSNextKeyView" ref="891105129"/>
 											<int key="NSTag">15</int>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSTextFieldCell" key="NSCell" id="494328698">
@@ -1364,6 +1364,7 @@
 											<string key="NSFrame">{{434, 38}, {19, 27}}</string>
 											<reference key="NSSuperview" ref="373613192"/>
 											<reference key="NSWindow"/>
+											<reference key="NSNextKeyView"/>
 											<int key="NSTag">8</int>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSStepperCell" key="NSCell" id="277746437">
@@ -3606,7 +3607,6 @@
 						<int key="objectID">668</int>
 						<reference key="object" ref="53174662"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="236318294"/>
 							<reference ref="860850009"/>
 							<reference ref="309447933"/>
 							<reference ref="399754840"/>
@@ -3615,9 +3615,6 @@
 							<reference ref="155938206"/>
 							<reference ref="841504761"/>
 							<reference ref="857608980"/>
-							<reference ref="919923729"/>
-							<reference ref="891105129"/>
-							<reference ref="986363287"/>
 							<reference ref="599471834"/>
 							<reference ref="566881816"/>
 							<reference ref="333990369"/>
@@ -3635,6 +3632,10 @@
 							<reference ref="336514373"/>
 							<reference ref="538036968"/>
 							<reference ref="824679099"/>
+							<reference ref="236318294"/>
+							<reference ref="919923729"/>
+							<reference ref="891105129"/>
+							<reference ref="986363287"/>
 						</array>
 						<reference key="parent" ref="439893737"/>
 					</object>
@@ -5476,24 +5477,6 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/FrSky_Terminal.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">NSTextView</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">toggleQuickLookPreviewPanel:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">toggleQuickLookPreviewPanel:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">toggleQuickLookPreviewPanel:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSTextView.h</string>
 					</object>
 				</object>
 			</array>
